# screen-break

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  PROJECT.md  README.md  SECURITY.md  generate_icon_win31.py  pyproject.toml  screen_break.py  screen_break.spec
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  stale.yml  welcome.yml
